# stock_project

./: README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/base/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/base/learn/: events.out.tfevents
notebooks/base/test/: events.out.tfevents
notebooks/baseline/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/baseline/learn/: events.out.tfevents
notebooks/baseline/test/: events.out.tfevents
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  partial_stats.tsv  time_left.tsv
notebooks/catboost_info/eval_dataset/: events.out.tfevents
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/tmp/: cat_feature_index.735f7836-23a5b1be-5e16cdc8-ee66db78.tmp  cat_feature_index.8f7f80af-94f7d185-f46765c9-fd7e9261.tmp  cat_feature_index.966f0d1a-c1ecc162-7528153d-62b8c372.tmp
ppt/: Task Presentation.pptx
stock_project/API/: main.py  response.py
stock_project/tools/: data_prep_tools.py  functions.py  global_variables.py  model.py
